--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "fantavolley",
+  "name": "progetto-esempio",
   "version": "1.0.0",
-  "description": "",
+  "description": "Un progetto Node.js di esempio",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1",
-    "sqlite3": "^5.1.7"
+    "express": "^4.18.1",
+    "sqlite3": "^5.0.0"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
